added tests + docs
